removed run tests from workflow - no unit tests available yet

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -28,8 +28,9 @@ jobs:
     - name: Build project
       run: npm run build
     
-    - name: Run tests
-      run: npm run test
+    #  no tests yet
+    # - name: Run tests
+    #   run: npm run test
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
