--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "gajunyoung",
+  "homepage": "https://k3vonk.github.io/gajunyoung/",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A personal webpage deployment",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Ga Jun Young <gajunyoung1997@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.1.1",
