--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,4 +1,4 @@
-name: Build & deploy
+name: Deploy Personal site
 
 on:
   push:
@@ -13,10 +13,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.3
       - uses: enriikke/gatsby-gh-pages-action@v2.2.0
         with:
           access-token: ${{ secrets.DEPLOY_PERSONAL_SITE }}
           deploy-branch: gh-pages
-          folder: ./build
     
